Fixing visibility issue with info

--- a/style.css
+++ b/style.css
@@ -227,18 +227,18 @@ body {
     transform: translate(-49%, -61%);
     height: 200px;
     width: 200px;
-    display: none;
+    display: flex;
+    visibility: hidden;
     justify-content: center;
     align-items: center;
     padding: 20px;
     background: #000000;
-    z-index: ;
     text-align: center;
     font-weight: 500;
     font-family: sans-serif;
 }
 .visible {
-    display: flex;
+    visibility: visible;
 }
 .visible::before {
     width: 100vw;
@@ -248,7 +248,6 @@ body {
     position: fixed;
     z-index: -1;
 }
-
 .footer {
     user-select: none;
     background: rgb(28, 47, 47);
